# python_labs

./: .gitignore  README.md  pyproject.toml
data/lab09/: students.csv
data/samples/: text_example_cp1251.txt
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  cvs_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md  README_example.md  notes
src/lab07/tests/: test_json_csv.py  test_text.py
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
