[project]
name = "my-labs-project"
version = "0.1.0"

requires-python = ">=3.9"
dependencies = ["black (>=25.11.0,<26.0.0)", "pytest-cov (>=7.0.0,<8.0.0)"]

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.6"
]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/
)
'''